# UMD_ADR_2018

./: .gitignore  CMakeLists.txt  README.md  git_workflow.txt  install_dependencies.sh  log_of_last_flight.txt  navigation.m  package.xml
Matlab/: GateData.mat  NavPID.mat  ROS_Pose_Compare.m  ROS_data_grabber.m  ROS_data_grabber_dyn.m  ROS_display.m  ROS_display_Gate.m  ROS_display_dyn.m  theta.csv  theta.mat
bebop_auto/: CMakeLists.txt  changelog.txt  dataflow.odg  package.xml
bebop_auto/msg/: Gate_Detection_Msg.msg
bebop_auto/scripts/: bebop_data.py  bebop_image.py  common_resources.py  driving.py  gate_crossing_detection.py  gate_detection.py  gate_detection_development_with_normal_distributions.py  ground_input.py  (+16 more)
cpp_src/gate_detection/: CMakeLists.txt  main.cpp
msg/: Waypoint_Msg.msg
rqt_gcs_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_gcs_gui/include/rqt_gcs_gui/: View.h
rqt_gcs_gui/launch/: rqt_gcs_gui.launch
rqt_gcs_gui/scripts/: rqt_gcs_gui
rqt_gcs_gui/src/rqt_gcs_gui/: View.cpp  View.ui
scripts/: common_resources.py  driving.py  driving_dynamic_openloop.py  gate_crossing_detection.py  gate_detection.py  gate_detection_dynamic.py  ground_input.py  ground_output.py  ground_output_without_controller.py  live_camera.py  main_navigation.py  main_navigation_working.py  navigation.py  navigation_working.py  odometry_merger.py  odometry_recorder.py  path_planner_visual.py  startup_jetson.launch  state_machine.py  tune_colors.py  tune_colors_values.txt  waypoint_creation_blind.py  waypoint_creation_visual.py
src/: camera_calibration
(+4 files in other folders)
